--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM</title>
+    <style>
+      .changed {
+            font-weight: bold;
+            color: red;
+        }  
+    </style>
 </head>
 <body>
-    <button id="button">Change links color and weight</button>
+    <button>Change links color and weight</button>
     <div id="container"></div>
 
-    <script src="dom.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
