--- a/Lesson 13/Part 2/index.html
+++ b/Lesson 13/Part 2/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Chess</title>
+    <meta charset="UTF-8">
+    <title>Chess</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<p>x: <input type="text" name="chess" id="x" onkeyup="success()"></p>
-	<p>y: <input type="text" name="chess" id="y" onkeyup="success()"></p> 
-	<button type = "submit" id="button" onclick="isNumb()" disabled>Create</button> 
+    <form>
+        <div class="form-group">
+            <label for="x">X: </label>
+            <input type="text" id="x">
+        </div>
 
-<script src="main.js"></script>
+        <div class="form-group">
+            <label for="y">Y: </label>
+            <input type="text" id="y">
+        </div>
+
+        <div class="form-group">
+            <button type="button" disabled>Create</button>
+        </div>
+    </form>
+
+    <script src="main.js"></script>
 </body>
 </html>
